tests/non-regression/055-err-frame-item-in-multiple.dfd
process A  a
frame A = F1
frame A = F2
